@@ -2,7 +2,7 @@ use strict;
 use warnings;
 
 use File::Temp qw( tempdir );
-use Git::Helpers qw( checkout_root );
+use Git::Helpers qw( checkout_root remote_url);
 use Test::Fatal;
 use Test::Git 1.313;
 use Test::More;
@@ -22,6 +22,10 @@ my $r = test_repository();
     my $root = checkout_root;
     ok( $root, "got root $root" );
     is( $root, $r->work_tree, 'root matches work_tree' );
+
+    my $remote_url = 'git@github.com:oalders/git-helpers.git';
+    git::remote( 'add', 'origin', $remote_url );
+    is( remote_url(), $remote_url, 'remote_url' );
 }
 
 {
